==================== 2.20.0 ====================

2008-03-11  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.22.0.

	* NEWS: Updated.

2008-03-06  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in.in: Moved from sabayon.desktop.in
	so we can do both of 1) substituting @PACKAGE_VERSION@, and 2)
	running this through INTLTOOL_DESKTOP_RULE.

	* configure.ac (AC_CONFIG_FILES): admin-tool/sabayon.desktop.in is a
	generated file now.

2008-02-21  John Robeson <johnny@localmomentum.net>

    * lib/test-debug-conf.py: updated the test

2008-02-21	Sayamindu Dasgupta	<sayamindu@gmail.com>

	* lib/storage.py (zip_directory): Fix recursive behaviour;
	Now only single instances of files are added, and ignored 
	files and directories are filtered out.
	Fixes bgo #476761

2008-02-18  Sayamindu Dasgupta  <sayamindu@gmail.com>

	* lib/util.py: Make it work; import fnmatch.

	* lib/util.py (should_ignore_dir): Fix the recursive call.

2008-02-18  Federico Mena Quintero  <federico@novell.com>

	* lib/util.py (should_ignore_dir): Moved over from dirmonitor.py;
	now this is a general-purpose function instead of being specific
	to the directory monitor.
	(should_ignore_file): Likewise.

	* lib/dirmonitor.py (DirectoryMonitor.__should_ignore_dir):
	Implement in terms of util.should_ignore_dir().
	(DirectoryMonitor.__should_ignore_file): Implement in terms of
	util.should_ignore_file().

2008-02-16  John Robeson  <johnny@localmomentum.net>

     fix an indent in lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      lib/cache.py
      lib/userdb.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * TABS to spaces
      admin-tool/profilesdialog.py
      lib/dirmonitor.py
      lib/storage.py
      lib/userpofile.py
      lib/sources/paneldelegate.py

2008-02-15  John Robeson  <johnny@localmomentum.net>

    * remove gnomesu from desktop.in 